fix: fixed spacing and timing on animation

--- a/index.sass
+++ b/index.sass
@@ -39,6 +39,7 @@ ol, ul
 
 ol
     font-family: $serif
+    font-size: .9em
 
 ul
     font-family: $sans-serif
@@ -99,4 +100,4 @@ a
     background-size: 1000% 1000%
     -webkit-background-clip: text
     -webkit-text-fill-color: transparent
-    animation: rainbow-animation 5s
+    animation: rainbow-animation 3s
